docs: optimize the text

--- a/docs/src/i18n/en.json
+++ b/docs/src/i18n/en.json
@@ -15,7 +15,7 @@
   "帮助文档": "Help Document",
   "快速上手": "Quick Start",
   "API": "API",
-  "翻译日志": "Translation log",
+  "翻译日志": "Translation Log",
   "以下特性继承于{0}": "The following features are inherited from {0}",
   "简易示例如下": "A simple example is as follows",
   "hello world": "Hello world",
@@ -40,7 +40,7 @@
   "参数说明": "Parameter Description",
   "返回值": "Return Value",
   "至此，项目已经完全接入了国际化，上面{0}指定为目标语言中任意一个，在页面上就能看到翻译好的内容了。后续如果项目中有新增的{1}（需要用{2}函数包裹哟），就仅仅需要再次执行翻译命令{3}生成最新的语言包就可以了": "At this point, the project has been completely connected to internationalization. The above {0} specifies any of the target language, and the translated content can be seen on the page. If there are new {1} (need to be wrapped with {2} function) in the subsequent project, you only need to execute the translation command {3} again to generate the latest language package",
-  "其他属性与{0}参数一致": "The other attributes are consistent with the {0} parameter",
+  "其他参数与{0}参数一致": "The other parameters are consistent with the {0} parameters",
   "为了避免不必要的重复文档内容，该库的部分文档是链接{0}中的内容": "To avoid unnecessary duplicate document content, some of the documents in this library are linked to the content in {0}",
   "当前文档中{0}相关链接是基于{1}版本，如果你使用的非该版本，需查看你所使用版本对应的文档，以免用法不一致": "The {0} related link in the current document is based on the {1} version. If you are using a different version, you need to check the document corresponding to the version you are using to avoid inconsistent usage",
   "当前库": "Current Library",
@@ -52,8 +52,8 @@
   "真实代码示例可参考{0}文档中的{1}": "Real code examples can refer to {1} in the {0} document",
   "注意：为了避免幽灵依赖导致 i18n 命令不能使用的问题，使用 pnpm 必须要安装 i18n-pro": "Note: To prevent issues where the i18n command cannot be used due to ghost dependencies, it is essential to install i18n-pro when using pnpm",
   "会在 Vue 的全局属性上注册如下 3 个属性，它们各自的类型及使用说明可点击链接查看": "It will register the following 3 properties on Vue's global properties. You can click on the links to view their respective types and usage instructions",
-  "注册的全局属性，使用时是否需要带前缀{0}": "Registered global attributes, do you need to bring prefix {0} when used",
-  "默认为 true，只能通过{0}来访问属性；若配置为 false，则可以直接通过{1}来访问属性": "The default is TRUE, you can only access the attribute through {0}; if configured to false, you can directly access the attribute through {1}",
+  "注册的全局属性，使用时是否需要带前缀{0}": "Registered global properties, do you need to bring prefix {0} when used",
+  "默认为 true，只能通过{0}来访问属性；若配置为 false，则可以直接通过{1}来访问属性": "The default is TRUE, you can only access the properties through {0}; if configured to false, you can directly access the properties through {1}",
   "该库是基于{0}结合{1}的{2}来实现的": "This library is implemented based on {0} combined with {1}'s {2}",
   "适用于 {0} 的轻量、简单、灵活、自动翻译的国际化工具": "Lightweight, simple, flexible, automatic translation internationalization tool for {0}",
   "注册插件": "Register Plugin",
@@ -63,7 +63,7 @@
   "当前库仅适用于{0}, 需要支持{1}的请点击{2}查看": "The current library is only applicable to {0}. If you need to support {1}, please click {2} to view",
   "该属性配置后，针对{0}和{1}都会生效": "After configuring this property, it will take effect for both {0} and {1}",
   "新增{0}和{1}基础实现": "Add basic implementation for {0} and {1}",
-  "在{0}中获取国际化状态和 API 的方法": "Methods to get internationalization state and API in {0}",
+  "在{0}中获取国际化状态和 API 的方法": "Method to get internationalization state and API in {0}",
   "组合式 API": "Composition API",
   "选项式 API": "Options API"
 }
