--- a/docs/src/i18n/en.json
+++ b/docs/src/i18n/en.json
@@ -65,5 +65,7 @@
   "新增{0}和{1}基础实现": "Add basic implementation for {0} and {1}",
   "在{0}中获取国际化状态和 API 的方法": "Method to get internationalization state and API in {0}",
   "组合式 API": "Composition API",
-  "选项式 API": "Options API"
+  "选项式 API": "Options API",
+  "注意：由于{0}和{1}是一个响应式的状态，使用时需要通过{2}的形式，类似如下：": "Note: Since {0} and {1} are reactive states, they need to be accessed with {2} when used, like the following:",
+  "调整{0}返回的属性名": "Adjust the property names returned by {0}"
 }
