--- a/docs/src/i18n/en.json
+++ b/docs/src/i18n/en.json
@@ -68,5 +68,7 @@
   "选项式 API": "Options API",
   "注意：由于{0}和{1}是一个响应式的状态，使用时需要通过{2}的形式，类似如下：": "Note: Since {0} and {1} are reactive states, they need to be accessed with {2} when used, like the following:",
   "调整{0}返回的属性名": "Adjust the property names returned by {0}",
-  "限制{0}的版本": "Limit versions of {0}"
+  "限制{0}的版本": "Limit versions of {0}",
+  "开箱即用的轻量级 Vue 国际化自动翻译解决方案": "An out-of-the-box, lightweight i18n auto-translation solution for Vue",
+  "适配{0}": "Adapt {0}"
 }
